eksctl/083/example-4/2-prometheus-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: letsencrypt-http01-staging
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - prometheus-v4.mitruk.me
    secretName: prometheus-v4-mitruk-me-key-pair
  rules:
  - host: prometheus-v4.mitruk.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
